--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,8 @@ jobs:
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
-      - name: 'init Prop'
-        run:
-           user=${{secrets.PHONE}}
-           password=${{secrets.PASSWORD}}
       - name: 'Post Sports'
-        run: bash ./sports.sh
+        run: bash ./sports.sh ${{secrets.PHONE}} ${{secrets.PASSWORD}}
       - name: 'Get Date'
         run: echo "REPORT_DATE=$(TZ=':Asia/Bei Jing' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
       - name: 'Send mail'
