--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
       - name: 'Post Sports'
-        run: bash ./sports.sh 
+        run: bash ./sports.sh  ${secrets.PHONE}  ${secrets.PASSWORD}
       - name: 'Get Date'
         run: echo "REPORT_DATE=$(TZ=':Asia/Bei Jing' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
       - name: 'Send mail'
-        uses: dawidd6/action-send-mail@master ${secrets.PHONE}  ${secrets.PASSWORD}
+        uses: dawidd6/action-send-mail@master 
         with:
           server_address: smtp.163.com
           server_port: 465
