--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,30 +2,34 @@ name: 刷步数
 
 on:
   push:
-      branches: 
-        - main
-  workflow_dispatch:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   schedule:
-    - cron: 0 2,8 * * *
+    - cron: 0 8 * * *
 
 jobs:
-  bot:
+  build:
     runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+
     steps:
-      - name: 'Checkout codes'
-        uses: actions/checkout@v1
-      - name: 'Post Sports'
-        run: bash ./sports.sh  ${{secrets.PHONE}}  ${{secrets.PASSWORD}}
-      - name: 'Get Date'
-        run: echo "REPORT_DATE=$(TZ=':Asia/Bei Jing' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
-      - name: 'Send mail'
-        uses: dawidd6/action-send-mail@master 
-        with:
-          server_address: smtp.163.com
-          server_port: 465
-          username: ${{ secrets.MAIL_USERNAME }}
-          password: ${{ secrets.MAIL_PASSWORD }}
-          subject: Xiao Mi Sports 
-          html_body: file://index.html
-          to: yuwangifeng@163.com
-          from: GitHub Actions
+    - uses: actions/checkout@v2
+    - name: 初始化Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: 开始
+      run: 
+        pip install requests
+        sckey='${{ secrets.SCKEY }}'
+        key='${{ secrets.KEY }}'
+        corpid='${{ secrets.CORPID }}'
+        corpsecret='${{ secrets.CORPSECRET }}'
+        user='${{ secrets.USER }}'
+        pwd='${{ secrets.PWD }}'
+        step='${{ secrets.STEP }}'
+        tgbotoken ='${{ secrets.TGBOTOKEN }}'
+        chatid ='${{ secrets.CHATID }}'
+        
+        python3 main.py <<EOF
