--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: 刷步数
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   schedule:
     - cron: 0 8 * * *
 
@@ -20,7 +20,7 @@ jobs:
       with:
         python-version: 3.7
     - name: 开始
-      run: 
+      run: |
         pip install requests
         sckey='${{ secrets.SCKEY }}'
         key='${{ secrets.KEY }}'
