--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,7 @@ jobs:
           user='${{ secrets.USER }}'
           pwd='${{ secrets.PWD }}'
           step='${{ secrets.STEP }}'
+          tgbotoken ='${{ secrets.TGBOTOKEN }}'||''
+          chatid ='${{ secrets.CHATID }}'||''
 
           python3 main.py <<EOF
