--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,25 @@
-## 暂时屏蔽
+name: 刷步数
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  schedule:
+    - cron: 0 2 * * *
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: 初始化Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: 开始
+        run: |
+          pip install requests
+          python3 main.py
